[package]
name = "rustfastq"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib ="0.47.0"
counter = "0.6.0"
# polars = {version = "0.37.0"} # features =["parquet", "lazy"]
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
itertools="0.13.0"
regex = "*"
csv="1"
once_cell = "1.19.0"  # for Phred Cahce
