[package]
name = "rustfastq"
version = "0.5.0"
edition = "2021"

license = " GPL-3.0-or-later"
description = "bare metal fastq parsing"
homepage = "https://github.com/redst4r/rustfastq"
repository = "https://github.com/redst4r/rustfastq"
keywords = ["bioinformatics","fastq"]
categories = ["science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles = { version = "0.87", features = ["fastq", "bgzf"] }
# getting rid of the curl feature, which pulls in openssl, not compiling on tuba
# rust-htslib = {version= "0.47.0", default-features = false, features=["bzip2", "lzma"]}
counter = "0.6.0"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
itertools="0.13.0"
regex = "1.11"
csv="1"
once_cell = "1.19.0"  # for Phred Cahce

# polars = {version = "0.37.0"} # features =["parquet", "lazy"]


[dev-dependencies]
criterion = "0.5"
noodles = { version = "0.87", features = ["fastq", "bgzf"] }
fastq = "0.6.0"
rust-htslib = {version= "0.47.0", default-features = false, features=["bzip2", "lzma"]}

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/bench.rs"